Support both JDD and CUDD as BDD backends
Closes #1788